The second stage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.24)
-project(privateLibraryOOP)
+project(privateLibrary)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(privateLibraryOOP test.cpp book.h book.cpp)
+add_executable(privateLibrary test.cpp book.h book.cpp)
