The third stage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(privateLibrary)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(privateLibrary test.cpp book.h book.cpp)
+add_executable(privateLibrary test.cpp book.h book.cpp library.h library.cpp)
